2006-02-xx dai <d+gkrelluim@vdr.jp>

	* gkrelluim.c
	  - add helper_toolbar_check_custom
	  - remove apply_gkrelluim_config
	           save_gkrelluim_config
		   load_gkrelluim_config
	  - sync _CommandEntry svn3105
	  - modify cb_menu_button
	* uim-helper.c
	  - add OBJECT_DATA_IM_BUTTON
	        im_menu_activate
		create_im_menu (popup_im_menu)
		list_data_free
		uim_toolbar_get_im_list
		im_data_flush
		im_button_append_menu
		helper_toolbar_im_list_update
	  - sync svn3105 get_charset
	                 convert_charset
			 helper_toolbar_prop_list_update
			 helper_toolbar_prop_label_update
			 helper_toolbar_parse_helper_str
			 fd_read_cb
			 uim_toolbar_check_helper_connection
	* ja.po
	  - update

2005-10-29 dai <d+gkrelluim@vdr.jp>

	* Release 0.0.6
	* configure.ac, gkrelluim.c, uim-helper.c
	  - use config.h
	* gkrelluim.c
	  - gettextize
	  - change license X/MIT to GPL
	* ja.po
	  - update

2005-09-28 dai <d+gkrelluim@vdr.jp>

	* Release 0.0.5
	* gkrelluim.c, uim-helper.c
	  - add license
	  - include some header files
	* gkrelluim.c
	  - refer launch menu to ~/.uim.d/customs/custom-toolbar.scm
	  - some cosmetic changes
	* src/Makefile.am
	  - s/CFLAGS/AM_CFLAGS/ s/LDFLAGS/AM_LDFLAGS/

2005-06-27 dai <d+gkrelluim@vdr.jp>

	* Release 0.0.4
	* rename from configure.in to configure.ac
	* add input label
	* remove unused functions and variables
	* fix typo my mail address
	* remove GtkItemFactory
	* split gkrelluim.c

2005-02-27 dai <d+gkrelluim@vdr.jp>

	* Release 0.0.3
	* remove launch button
	* add launch menu
	* apply gkrelluim-0.0.2-status_text.diff (by Konosuke Watanabe, thx!)
	* parts taken from toolbar-common-gtk.c (0.4.6beta2),
	  replace parts taken from old helper-toolbar-common-gtk.c

2004-10-20 dai <d+gkrelluim@vdr.jp>

	* Release 0.0.2
	* add launch button uim-im-switcher

2004-09-23 dai <d+gkrelluim@vdr.jp>

	* Release 0.0.1
	* autoconficate

2004-09-11 dai <d+gkrelluim@vdr.jp>

	* Release 0.0.0 (20040911.1)
	* s/strdup/g_strdup/
