@@ -1,0 +1,38 @@
+/*
+  GKrellUIM: GKrellM UIM helper Plugin header
+
+  Copyright (C) 2006 dai <d+gkrelluim@vdr.jp>
+  All rights reserved.
+
+  This program is free software; you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation; either version 2 of the License, or
+  (at your option) any later version.
+
+  This program is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with this program; if not, write to the Free Software
+  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
+*/
+
+#ifndef __GKRELLUIM_H__INCLUDED__
+#define __GKRELLUIM_H__INCLUDED__
+
+#include <uim/uim.h>
+#include <uim/uim-helper.h>
+#include <uim/uim-compat-scm.h>
+
+#define OBJECT_DATA_IM_BUTTON    "IM_BUTTON"
+#define OBJECT_DATA_MODE_BUTTON  "MODE_BUTTON"
+#define OBJECT_DATA_MODE_LIST    "MODE_LIST"
+#define OBJECT_DATA_INPUT_BUTTON "INPUT_BUTTON"
+#define OBJECT_DATA_INPUT_LIST   "INPUT_LIST"
+
+#define TYPE_MODE  0
+#define TYPE_INPUT 1
+
+#endif /* __GKRELLUIM_H__INCLUDED__ */
